2006-03-07  Darin Adler  <darin@apple.com>

        Reviewed by Anders.

        - fix http://bugzilla.opendarwin.org/show_bug.cgi?id=7655
          unwanted output while running layout tests

        * khtml/xsl/xsl_stylesheetimpl.cpp: (WebCore::XSLStyleSheetImpl::parseString):
        Pass XML_PARSE_NOERROR and XML_PARSE_NOWARNING. We don't want errors and warnings
        to be logged to stdout or stderr. If we later decide we want the error messages,
        then we should do the additional work to put them into the web page or the
        console (along with the JavaScript errors).

        * platform/ArrayImpl.cpp: (WebCore::ArrayImpl::resize): Add a preflight to protect
        against integer overflow due to large array size. Noticed this while looking into
        the malloc error message.

2006-03-07  Darin Adler  <darin@apple.com>

        Reviewed by Adele.

        - fix http://bugzilla.opendarwin.org/show_bug.cgi?id=7647
          Crash when typing into text contols

        I missed a couple places that were still saying KWQWidgetHolder
        in the change I landed late last night.

        * kwq/KWQTextArea.h:
        * kwq/KWQTextArea.mm:
        * kwq/KWQTextField.h:
        Changed them all to say WebCoreWidgetHolder.

2006-03-07  Eric Seidel  <eseidel@apple.com>

        Reviewed by hyatt.

        Fix cursor support on win32.

        * platform/win/WidgetWin.cpp:
        (WebCore::Widget::setCursor):

2006-03-07  Eric Seidel  <eseidel@apple.com>

        Reviewed by hyatt.

        Fix basic text support.

        * WebCore.vcproj/WebCore/WebCore.vcproj:
        * platform/cairo/GraphicsContextCairo.cpp:
        (WebCore::GraphicsContext::drawText):

2006-03-07  Dave Hyatt <hyatt@apple.com>

        Eliminate the unused parameters of the QString version of drawText.

        Reviewed by eric

        * platform/GraphicsContext.h:
        * platform/cairo/GraphicsContextCairo.cpp:
        (WebCore::GraphicsContext::drawText):